umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_nd+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Nd#c+3#u3"] :bonds [] :charge 3 :spin "#u3#s4"}
    :success true}
  :counts {
    :output {:atoms ["Nd#c+3#n#u"] :bonds [] :charge 3 :spin "#u1#s2"}
    :success true}}
