umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_ni+2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Ni#c+2#n3#u2"} :bonds [] :charge 2 :spin "#u2 #s3"}} :counts {:success true :output {:atoms {"0" "Ni#c+2#n3#u2"} :bonds [] :charge 2 :spin "#u2 #s3"}}}
