umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_np+4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Np#c+4#u3"} :bonds [] :charge 4 :spin "#u3 #s4"}} :counts {:success true :output {:atoms {"0" "Np#c+4#n#u"} :bonds [] :charge 4 :spin "#u1 #s2"}}}
