umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_np+5.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Np#c+5#u2"] :bonds [] :charge 5 :spin "#u2#s3"}
    :success true}
  :counts {
    :output {:atoms ["Np#c+5#n"] :bonds [] :charge 5 :spin "#u0#s1"}
    :success true}}
