umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_np+6.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Np#c+6#u"] :bonds [] :charge 6 :spin "#u1#s2"}
    :success true}
  :counts {
    :output {:atoms ["Np#c+6#u"] :bonds [] :charge 6 :spin "#u1#s2"}
    :success true}}
